Related fdo#53006 Make CApitals correction work without dictionary

In a language for which there is no dictionary available (no "ABC" check in
front of the current item in Writer's "Format - Character... - Font - Language"
list), "Correct TWo INitial CApitals" (from Writer's "Tools - AutoCorrect
Options... - Options") did not work (i.e., typing "FOo" followed by a space
would not change it to "Foo").  That was apparently a regression introduced with
51efaa592d4f54133c74e38cf294526bc78dffcd "Double-capital autocor takes
spellcheck in account."  (I verified that with this fix words like "MPs" in
"English (UK)" are still left as "MPs.")  Thanks to Caolán for help.

Change-Id: Ia76286e4ca73138ce3571145b9c40b031a4553ba